syntax = "proto3";

package SampleCheck;

import "mixer/v1/template/standard_types.proto";
import "mixer/v1/template/extensions.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_CHECK;

message Template {
    string stringPrimitive = 4;
}
