syntax = "proto3";

package SampleReport;

import "mixer/v1/template/standard_types.proto";
import "mixer/v1/template/extensions.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_REPORT;

message Template {
    istio.mixer.v1.template.Value value = 1;
    map<string, istio.mixer.v1.template.Value> dimensions = 2;
}
